trying to fix text alignment issue

--- a/style.css
+++ b/style.css
@@ -155,7 +155,6 @@ html {
     display: flex;
     -ms-flex-pack: center;
     justify-content: center;
-    top: 50%;
 }
 
 .landing-icons .social-link {
